common-base/platform-w-local-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vc-platform-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vc-platform-web
  template:
    metadata:
      labels:
        app: vc-platform-web
    spec:
      containers:
      - command:
        - /wait-for-it.sh
        - vc-db:1433
        - -t
        - "120"
        - --
        - dotnet
        - VirtoCommerce.Platform.Web.dll      
        image: virtocommerce/platform:3.0
        name: vc-platform-web
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/opt/virtocommerce/platform/wwwroot/cms-content"
          name: cms-content-data
        - mountPath: "/opt/virtocommerce/platform/Modules"
          name: modules-data      volumes:
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: cms-content-volume
      - name: modules-data
        persistentVolumeClaim:
          claimName: modules-volume
