common-base/storefront-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
      - name: vc-storefront-web
        image: virtocommerce/storefront:latest-linux
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /opt/virtocommerce/storefront/wwwroot/cms-content
          name: cms-content-data
      volumes:
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: cms-content-volume
