common-base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vc-db
spec:
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  selector:
    app: vc-db
